--- a/P1.html
+++ b/P1.html
@@ -1,15 +1,20 @@
-<!DOCTYPE html>
 <html>
 <head>
-<body bgcolor ="red">
-<center>
-<title> Welcome to letshangout </title>
-	<h1>
-		This is the webpage about me
-	<h1>
-<p>My first paragraph.</p>
 
-</center>
+<title> Welcome to letshangout </title>
+
+</head>
+
+<body bgcolor ="red">
+	
+	<center>
+	
+	<h1>This is the webpage about me</h1>
+	
+	<p>Weijia Huang is an entrepreneur from Hainan, China. He owns and operates several businesses in China, including a shopping mall and a real estate company. Xavier graduated from B.U. school of entrepreneurial management, and is not studying at Harvard Extension School. Xavier plans to attend business school and expand his businesses between China and the U.S. </p>
+
+	</center>
+
 </body>
 </html>
 
